--- a/core/index.css
+++ b/core/index.css
@@ -32,6 +32,7 @@
   --size3: 32px;
   --size4: 48px;
   --size5: 64px;
+  --size6: 128px;
   --scrollbar-size: 10px;
   --fill: -webkit-fill-available;
 }
@@ -172,7 +173,7 @@ mark {
   justify-content: center;
 }
 
-[xtext]{
+[xtext] {
   display: inline-block;
   width: fit-content;
   height: auto;
