--- a/core/index.css
+++ b/core/index.css
@@ -90,7 +90,7 @@ body {
   overflow: hidden;
   height: 100vh;
   width: 100vw;
-  font-family: 'Montserrat', 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
 }
 
@@ -141,6 +141,26 @@ abbr {
 mark {
   background-color: var(--accent);
   color: var(--light);
+}
+
+.Montserrat {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.Open_sans {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.Roboto {
+  font-family: 'Roboto', sans-serif;
+}
+
+.Barlow {
+  font-family: 'Barlow', sans-serif;
+}
+
+.Comfortaa {
+  font-family: 'Comfortaa', sans-serif;
 }
 
 /********************/
