--- a/core/index.css
+++ b/core/index.css
@@ -162,7 +162,7 @@ mark {
 #xbody, [xbody] {
   overflow: auto;
   transform-origin: bottom;
-  transition: rotateX 0.5s ease;
+  transition: transform 0.3s ease;
 }
 
 #xbody[hide], [xbody][hide] {
